var pb = require('protobufjs');
var g2l = pb.protoFromFile('../protocol/g2l.proto');

var AccountLogin = g2l.build('G2L').AccountLogin;
var ConcurrentUser = g2l.build('G2L').ConcurrentUser;
var PeakConcurrentUser = g2l.build('G2L').PeakConcurrentUser;
var UniqueVisitor = g2l.build('G2L').UniqueVisitor;
var RetentionRate = g2l.build('G2L').RetentionRate;
var PayCharacter = g2l.build('G2L').PayCharacter;
var PayCoin = g2l.build('G2L').PayCoin;
var PayHeart = g2l.build('G2L').PayHeart;
var PayItem = g2l.build('G2L').PayItem;
var PayMoney = g2l.build('G2L').PayMoney;
var UserGamePlay = g2l.build('G2L').UserGamePlay;
var UserRegister = g2l.build('G2L').UserRegister;
var UserUnregister = g2l.build('G2L').UserUnregister;

exports.AccountLogin = AccountLogin;
exports.ConcurrentUser = ConcurrentUser;
exports.PeakConcurrentUser = PeakConcurrentUser;
exports.UniqueVisitor = UniqueVisitor;
exports.RetentionRate = RetentionRate;
exports.PayCharacter = PayCharacter;
exports.PayCoin = PayCoin;
exports.PayHeart = PayHeart;
exports.PayItem = PayItem;
exports.PayMoney = PayMoney;
exports.UserGamePlay = UserGamePlay;
exports.UserRegister = UserRegister;
exports.UserUnregister = UserUnregister;
